Samples update (#130)
* Samples update

Signed-off-by: Daniel Kec <daniel.kec@oracle.com>