@@ -21,10 +21,11 @@
     </parent>
 
     <groupId>com.sun.xml.messaging.saaj</groupId>
-    <artifactId>saaj-impl</artifactId>
+    <artifactId>metro-saaj</artifactId>
     <version>1.6.0-SNAPSHOT</version>
-    
-    <name>Jakarta SOAP Implementation</name>
+    <packaging>pom</packaging>
+
+    <name>Jakarta SOAP</name>
     <description>
        Implementation of Jakarta SOAP with Attachments Specification 1.4
     </description>
@@ -157,246 +158,6 @@
                 </plugin>
             </plugins>
         </pluginManagement>
-
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-enforcer-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>enforce-maven</id>
-                        <goals>
-                            <goal>enforce</goal>
-                        </goals>
-                        <configuration>
-                            <rules>
-                                <requireJavaVersion>
-                                    <version>[11,)</version>
-                                </requireJavaVersion>
-                                <requireMavenVersion>
-                                    <version>[3.6.0,)</version>
-                                </requireMavenVersion>
-                            </rules>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>build-helper-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>add-legal-resource</id>
-                        <phase>generate-resources</phase>
-                        <goals>
-                            <goal>add-resource</goal>
-                        </goals>
-                        <configuration>
-                            <resources>
-                                <resource>
-                                    <directory>${legal.doc.source}</directory>
-                                    <includes>
-                                        <include>NOTICE.md</include>
-                                        <include>LICENSE.md</include>
-                                    </includes>
-                                    <targetPath>META-INF</targetPath>
-                                </resource>
-                            </resources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>copy-upgrade-module-path</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>copy-dependencies</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${upgrade.mods}</outputDirectory>
-                            <includeArtifactIds>jakarta.xml.soap-api,jakarta.activation,jakarta.xml.bind-api</includeArtifactIds>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>9</source>
-                    <target>9</target>
-                    <compilerArgs>
-                        <arg>-Xlint:all</arg>
-                    </compilerArgs>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>base-compile</id>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                        <configuration>
-                            <release>8</release>
-                            <excludes>
-                                <exclude>module-info.java</exclude>
-                            </excludes>
-                            <compilerArgs>
-                                <arg>-Djava.endorsed.dirs=${upgrade.mods}</arg>
-                            </compilerArgs>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <!--compile test classes with source/target 7-->
-                        <id>default-testCompile</id>
-                        <goals>
-                            <goal>testCompile</goal>
-                        </goals>
-                        <configuration>
-                            <release>11</release>
-                            <compilerArgs>
-                                <arg>--add-exports</arg>
-                                <arg>com.sun.xml.messaging.saaj/com.sun.xml.messaging.saaj.soap.impl=com.sun.xml.messaging.saaj.test</arg>
-                            </compilerArgs>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>buildnumber-maven-plugin</artifactId>
-                <configuration>
-                    <getRevisionOnlyOnce>true</getRevisionOnlyOnce>
-                    <timestampFormat>{0,date,yyyy-MM-dd'T'HH:mm:ssZ}</timestampFormat>
-                    <shortRevisionLength>7</shortRevisionLength>
-                    <revisionOnScmFailure>false</revisionOnScmFailure>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>create</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>bundle-manifest</id>
-                        <phase>process-classes</phase>
-                        <goals>
-                            <goal>manifest</goal>
-                        </goals>
-                        <configuration>
-                            <instructions>
-                                <Export-Package>
-                                    !com.sun.xml.messaging.saaj.client.p2p,
-                                    !com.sun.xml.messaging.saaj.soap.impl,
-                                    !com.sun.xml.messaging.saaj.soap.ver1_1,
-                                    !com.sun.xml.messaging.saaj.soap.ver1_2,
-                                    *
-                                </Export-Package>
-                                <Import-Package>
-                                    javax.activation;version=!,
-                                    javax.xml.bind.attachment;version=!,
-                                    *
-                                </Import-Package>
-                                <Implementation-Build-Id>${project.version} - ${scmBranch}-${buildNumber}, ${timestamp}</Implementation-Build-Id>
-                            </instructions>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <configuration>
-                    <archive>
-                        <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
-                        <manifest>
-                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-                        </manifest>
-                    </archive>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-                        </manifest>
-                        <manifestEntries>
-                            <Implementation-Build-Id>${project.version} - ${scmBranch}-${buildNumber}, ${timestamp}</Implementation-Build-Id>
-                        </manifestEntries>
-                    </archive>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <configuration>
-                    <release>11</release>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.glassfish.copyright</groupId>
-                <artifactId>glassfish-copyright-maven-plugin</artifactId>
-                <configuration>
-                    <templateFile>${copyright.template}</templateFile>
-                    <excludeFile>${copyright.exclude}</excludeFile>
-                    <!-- skip files not under SCM-->
-                    <scmOnly>${copyright.scmonly}</scmOnly>
-                    <!-- for use with repair -->
-                    <update>${copyright.update}</update>
-                    <!-- check that year is correct -->
-                    <ignoreYear>${copyright.ignoreyear}</ignoreYear>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>com.github.spotbugs</groupId>
-                <artifactId>spotbugs-maven-plugin</artifactId>
-                <configuration>
-                    <skip>${spotbugs.skip}</skip>
-                    <threshold>${spotbugs.threshold}</threshold>
-                    <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
-                    <excludeFilterFile>
-                        ${spotbugs.exclude}
-                    </excludeFilterFile>
-                    <fork>true</fork>
-                    <jvmArgs>-Xms64m -Xmx256m</jvmArgs>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <!-- jakarta.activation impl is required for tests -->
-                    <classpathDependencyExcludes>
-                        <classpathDependencyExclude>jakarta.activation:jakarta.activation-api</classpathDependencyExclude>
-                        <classpathDependencyExclude>jakarta.xml.bind:jakarta.xml.bind-api</classpathDependencyExclude>
-                    </classpathDependencyExcludes>
-                    <systemProperties>
-                        <java.awt.headless>true</java.awt.headless>
-                    </systemProperties>
-                </configuration>
-            </plugin>
-        </plugins>
     </build>
 
     <dependencyManagement>
@@ -492,109 +253,9 @@
         </dependency>
     </dependencies>
 
-    <profiles>
-        <!-- invoke unit tests against JDK like this:
-         mvn clean test -DtestInJdk -Djdk.to.test=$jdk/home/path/bin/java
-         -->
-        <profile>
-            <id>jdk</id>
-            <activation>
-                <property>
-                    <name>testInJdk</name>
-                </property>
-            </activation>
-            <properties>
-                <argLine>${proxyOpts} -Djdk.build=true</argLine>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <!-- some random non-existing directory to make sure the built classes are not found, instead the ones from jdk are used -->
-                            <classesDirectory>jerreAbfAFgfreu</classesDirectory>
-                            <excludes>
-                                <!-- tests using RI specific API -->
-                                <exclude>**/MimeUtilityTest.java</exclude>
-                            </excludes>
-                            <classpathDependencyScopeExcludes>compile</classpathDependencyScopeExcludes>
-                            <classpathDependencyExcludes>
-                                <classpathDependencyExclude>jakarta.xml.soap:jakarta.xml.soap-api</classpathDependencyExclude>
-                                <classpathDependencyExclude>org.jvnet.mimepull:mimepull</classpathDependencyExclude>
-                            </classpathDependencyExcludes>
-                            <jvm>${jdk.to.test}</jvm>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>jdk-sm</id>
-            <activation>
-                <property>
-                    <name>testInJdkWithSM</name>
-                </property>
-            </activation>
-            <properties>
-                <argLine>${proxyOpts} -Djdk.build=true -Djava.security.manager -Djava.security.policy=./src/test/resources/test.policy</argLine>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <!-- some random non-existing directory to make sure the built classes are not found, instead the ones from jdk are used -->
-                            <classesDirectory>jerreAbfAFgfreu</classesDirectory>
-                            <excludes>
-                                <!-- tests using RI specific API -->
-                                <exclude>**/MimeUtilityTest.java</exclude>
-                            </excludes>
-                            <classpathDependencyScopeExcludes>compile</classpathDependencyScopeExcludes>
-                            <classpathDependencyExcludes>
-                                <classpathDependencyExclude>jakarta.xml.soap:jakarta.xml.soap-api</classpathDependencyExclude>
-                                <classpathDependencyExclude>org.jvnet.mimepull:mimepull</classpathDependencyExclude>
-                            </classpathDependencyExcludes>
-                            <jvm>${jdk.to.test}</jvm>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>coverage</id>
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <groupId>org.jacoco</groupId>
-                            <artifactId>jacoco-maven-plugin</artifactId>
-                            <version>0.8.4</version>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
-                <plugins>
-                    <plugin>
-                        <groupId>org.jacoco</groupId>
-                        <artifactId>jacoco-maven-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>default-prepare-agent</id>
-                                <goals>
-                                    <goal>prepare-agent</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <id>default-report</id>
-                                <goals>
-                                    <goal>report</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
+    <modules>
+        <module>saaj-ri</module>
+        <module>saaj-samples</module>
+    </modules>
+
 </project>
